[package]
name = "object-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
services-memory = ["opendal/services-memory"]

[dependencies]
bytes.workspace = true
common-telemetry.workspace = true
futures.workspace = true
lazy_static.workspace = true
md5 = "0.7"
moka = { workspace = true, features = ["future"] }
opendal = { git = "https://github.com/GreptimeTeam/opendal.git", rev = "c82605177f2feec83e49dcaa537c505639d94024", features = [
    "layers-tracing",
    "layers-prometheus",
    "services-azblob",
    "services-fs",
    "services-gcs",
    "services-http",
    "services-oss",
    "services-s3",
] }
prometheus.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow = "1.0"
common-telemetry.workspace = true
common-test-util.workspace = true
tokio.workspace = true
