[package]
name = "object-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
services-memory = ["opendal/services-memory"]

[dependencies]
bytes.workspace = true
common-base.workspace = true
common-error.workspace = true
common-macro.workspace = true
common-telemetry.workspace = true
futures.workspace = true
humantime-serde.workspace = true
lazy_static.workspace = true
md5 = "0.7"
moka = { workspace = true, features = ["future"] }
opendal = { git = "https://github.com/apache/opendal", rev = "0ba8574b6d08d209056704d28a9a114beb3c1022", features = [
    "layers-tracing",
    "layers-prometheus",
    "services-azblob",
    "services-fs",
    "services-gcs",
    "services-http",
    "services-oss",
    "services-s3",
] }
prometheus.workspace = true
reqwest.workspace = true
serde.workspace = true
snafu.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow = "1.0"
common-telemetry.workspace = true
common-test-util.workspace = true
tokio.workspace = true
